--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,16 @@
 
   <ng-template #prev>
       <img src = "assets/images/left-arrow.png" id="left">
-      
+  </ng-template>
+
+  <ng-template #next>
+      <img src = "assets/images/right-arrow.png" id="right"> 
+  </ng-template>
+
+  <ng-template #item let-item let-i= "index" >
+     
+     <div class= "items">
+       <img src= "{{item.name}}">
+     </div>
   </ng-template>
 </div> 
