--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div id = "container">
-  <div ng2-carouselamos calss="slides =wrapper"
-      [iteams]= "items"
+  <div ng2-carouselamos class="slides-wrapper"
+      [items]= "items"
       [width]= "900"
       [$prev]= "prev"
       [$next] ="next"
-      [$ite,]= "item">
+      [$item]= "item">
   </div>
 
   <ng-template #prev>
