--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,11 +8,11 @@
   </div>
 
   <ng-template #prev>
-      <img src = "assets/images/left-arrow.png" id="left">
+      <img src = "https://cdn.jsdelivr.net/gh/phlipzamo/scrolling@master/src/app/assets/images/left-arrow.png" id="left">
   </ng-template>
 
   <ng-template #next>
-      <img src = "assets/images/right-arrow.png" id="right"> 
+      <img src = "https://cdn.jsdelivr.net/gh/phlipzamo/scrolling@master/src/app/assets/images/right-arrow.png" id="right"> 
   </ng-template>
 
   <ng-template #item let-item let-i= "index" >
