--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,16 @@
-p {
-  font-family: Lato;
+#container {
+  width: 100%;
+  margin: 5em auto;
+  padding:0;
+  background: #fff;
+}
+
+.items{
+  max-width: 500px;
+  height: 300px;
+  background:#ECECEC;
+
+}
+#LEFT, #RIGHT {
+  margin: 30px;
 }
